--- a/tp5/cancha/templates/colas/colas.html
+++ b/tp5/cancha/templates/colas/colas.html
@@ -51,6 +51,9 @@
 <div class="text-right">
     <button class="btn btn-lg btn-primary">Calcular</button>
 </div>
+<div class="text-right">
+    <button class="btn btn-lg btn-primary">Resetear</button>
+</div>
 <br>
 
 {% if tabla %}
