--- a/tp5/cancha/templates/colas/table.html
+++ b/tp5/cancha/templates/colas/table.html
@@ -31,25 +31,35 @@
     <thead class="thead-dark m-auto" id="table.demo1">
     <tr class="h5">
         <th colspan="1" rowspan="3" class="table-info">Evento</th>
-        <th colspan="1" rowspan="3" class="table-info">Reloj (minutos)</th>
+        <th colspan="1" rowspan="3" class="table-info">Reloj (horas)</th>
         <th colspan="3" rowspan="2" class="table-info">llegada_futbol</th>
         <th colspan="4" rowspan="2" class="table-info">llegada_handball</th>
         <th colspan="4" rowspan="2" class="table-info">llegada_basquet</th>
         <th colspan="4" rowspan="2" class="table-info">fin_futbol</th>
         <th colspan="4" rowspan="2" class="table-info">fin_handball</th>
         <th colspan="5" rowspan="2" class="table-info">fin_basquet</th>
-        <th colspan="3" rowspan="2" class="table-info">fin_acondicionamiento</th>>fin_llamada_externa (i)</th>
+        <th colspan="3" rowspan="2" class="table-info">fin_acondicionamiento</th>
 
         <th colspan="3" rowspan="2" class="table-info">Cancha</th>
 
-        <th colspan="6" rowspan="1" class="table-info">Estadisticas</th>
+        <th rowspan="1" colspan="9" class="table-primary">Tiempo de espera promedio</th>
+        <th rowspan="1" colspan="6" class="table-primary">Porcentaje de ocupacion</th>
 
-        <th colspan="{{grupos|length}}" rowspan="2" class="table-info">Grupos</th>
+        <th colspan="{{grupos|length}}" rowspan="1" class="table-info">Grupos({{grupos|length}})</th>
 
     </tr>
     <tr style="{top: 120px}">
-        <th rowspan="1" colspan="2" class="table-primary">Tiempo de espera promedio</th>
-        <th rowspan="1" colspan="2" class="table-primary">Porcentaje de ocupacion</th>
+
+        <th rowspan="1" colspan="3" class="table-primary">Futbol</th>
+        <th rowspan="1" colspan="3" class="table-primary">Handball</th>
+        <th rowspan="1" colspan="3" class="table-primary">Basquet</th>
+        <th rowspan="1" colspan="2" class="table-primary">Futbol</th>
+        <th rowspan="1" colspan="2" class="table-primary">Handball</th>
+        <th rowspan="1" colspan="2" class="table-primary">Basquet</th>
+
+        <th colspan="{{grupos_futbol|length}}" rowspan="1" class="table-info">Futbol({{grupos_futbol|length}})</th>
+        <th colspan="{{grupos_handball|length}}" rowspan="1" class="table-info">Handball({{grupos_handball|length}})</th>
+        <th colspan="{{grupos_basquet|length}}" rowspan="1" class="table-info">Basquet({{grupos_basquet|length}})</th>
 
         {% with ''|center:10 as range %}
         {% for _ in range %}
@@ -75,80 +85,92 @@
 
 
     </tr>
-    <tr class="th-2">
-        <th  rowspan="1" colspan="1" scope="col" class="table-primary th-3">RND</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">tiempo llegada</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">proxima llegada</th>
+    <tr class="th-1">
+        <th  rowspan="2" colspan="1" scope="col" class="table-primary th-3">RND</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">tiempo llegada</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">proxima llegada</th>
 
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 1</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 2</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">tiempo llegada</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">proxima llegada</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 1</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 2</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">tiempo llegada</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">proxima llegada</th>
 
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 1</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 2</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">tiempo llegada</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">proxima llegada</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 1</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 2</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">tiempo llegada</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">proxima llegada</th>
 
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 1</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 2</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">tiempo ocupacion</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">fin ocupacion</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 1</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 2</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">tiempo ocupacion</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">fin ocupacion</th>
 
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 1</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 2</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">tiempo ocupacion</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">fin ocupacion</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 1</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 2</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">tiempo ocupacion</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">fin ocupacion</th>
 
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 1</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">RND 2</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">tiempo ocupacion</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">fin ocupacion (1)</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">fin ocupacion (2)</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 1</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">RND 2</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">tiempo ocupacion</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">fin ocupacion (1)</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">fin ocupacion (2)</th>
 
 
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">M</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">tiempo acondicionamiento</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">fin acondicionamiento</th>
-    
-        <!-- LLamadas internas -->
-        {% for llamada in llamadas_internas %}
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">&nbsp&nbsp&nbsp&nbsp{{ llamada }}&nbsp&nbsp&nbsp&nbsp</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary"> M </th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">tiempo acondicionamiento</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">fin acondicionamiento</th>
+
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Estado</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Cola Futbol/Handball</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Cola Basquet</th>
+
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Acu</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Grupos</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Promedio</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Acu</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Grupos</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Promedio</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Acu</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Grupos</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Promedio</th>
+
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Acu</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary"> % </th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Acu</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary"> % </th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary">Acu</th>
+        <th rowspan="2" colspan="1" scope="col" class="table-primary"> % </th>
+<!--
+        {% for grupo in grupos_futbol %}
+        <th colspan="3" rowspan="1" class="table-info">{{grupo.numero}}</th>
+        {% endfor %}
+        {% for grupo in grupos_handball %}
+        <th colspan="3" rowspan="1" class="table-info">{{grupo.numero}}</th>
+        {% endfor %}
+        {% for grupo in grupos_basquet %}
+        <th colspan="3" rowspan="1" class="table-info">{{grupo.numero}}</th>
+        {% endfor %}
+-->
+        <!-- Grupos de Futbol -->
+        {% for grupo in grupos_futbol %}
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Estado ({{ grupo.numero }})</th>
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Hora llegada ({{ grupo.numero }})</th>
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Inicio Juego ({{ grupo.numero }})</th>
         {% endfor %}
 
-        <!-- LLamadas internas -->
-        {% for llamada in llamadas_externas %}
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">&nbsp&nbsp&nbsp&nbsp{{ llamada }}&nbsp&nbsp&nbsp&nbsp</th>
+        <!-- Grupos de Handball -->
+        {% for grupo in grupos_futbol %}
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Estado ({{ grupo.numero }})</th>
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Hora llegada ({{ grupo.numero }})</th>
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Inicio Juego ({{ grupo.numero }})</th>
         {% endfor %}
 
-
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">Perdidas Internas</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">Perdidas Externas</th>
-
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">Totales Internas</th>
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">Totales Externas</th>
-
-        {% with ''|center:10 as range %}
-        {% for _ in range %}
-            <th rowspan="1" colspan="1" scope="col" class="table-primary">Estado ({{ forloop.counter }})</th>
-        {% endfor %}
-        {% endwith %}
-
-        {% with ''|center:3 as range %}
-        {% for _ in range %}
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">Estado ({{ forloop.counter }})</th>
-
-        {% endfor %}
-        {% endwith %}
-
-        <!-- LLamadas internas -->
-        {% for llamada in llamadas_internas %}
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">Estado ({{ llamada }})</th>
-        {% endfor %}
-
-        <!-- LLamadas internas -->
-        {% for llamada in llamadas_externas %}
-        <th rowspan="1" colspan="1" scope="col" class="table-primary">Estado ({{ llamada }})</th>
+        <!-- Grupos de Basquet -->
+        {% for grupo in grupos_futbol %}
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Estado ({{ grupo.numero }})</th>
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Hora llegada ({{ grupo.numero }})</th>
+        <th rowspan="1" colspan="1" scope="col" class="table-primary">Inicio Juego ({{ grupo.numero }})</th>
         {% endfor %}
 
     </tr>
